--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <h1>she never need a man, she what man need</h1>
 
-Thought I almost died in my dream again (baby, almost died)
+<p1>Thought I almost died in my dream again (baby, almost died)
 Fightin' for my life, I couldn't breathe again
 I'm fallin' in too deep (oh, oh)
 Without you, I can't sleep (fallin' in)
 'Cause my heart belongs to you
 I'll risk it all for you
-I want you next to me
+I want you next to me</p1>
